# Summary: Package metadata and PyPI configuration for Urial.
#
# Copyright 2024 Michael Hucka.
# License: MIT License – see file "LICENSE" in the project website.
# Website: https://github.com/mhucka/urial

[metadata]
name          = urial
version       = 1.2.0
description   = URI Addition tooL: add/update a URI in a macOS Finder comment
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/mhucka/urial
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/mhucka/urial
  Bug Tracker = https://github.com/mhucka/urial/issues
keywords      = Python, utilities
classifiers   =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.9

[options.entry_points]
console_scripts = 
  urial = urial.__main__:console_scripts_main
